// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Widget /> open/close 1`] = `
<Widget
  bodyText="Body"
  footerText="Footer"
  headerText="Header"
>
  <div
    className="docked-widget"
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={250}
      unmountOnExit={false}
    >
      <div
        className="widget widget-exited"
      >
        <div
          className="widget-header"
        >
          <div
            className="widget-header-title"
          >
            Header
          </div>
          <button
            className="widget-header-icon"
            onClick={[Function]}
            onKeyPress={[Function]}
            type="button"
          >
            X
          </button>
        </div>
        <div
          className="widget-body"
        >
          Body
        </div>
        <div
          className="widget-footer"
        >
          Footer
        </div>
      </div>
    </Transition>
    <button
      className="dock"
      onClick={[Function]}
      onKeyPress={[Function]}
      type="button"
    >
      ^ OPEN ^
    </button>
  </div>
</Widget>
`;

exports[`<Widget /> open/close 2`] = `
<Widget
  bodyText="Body"
  footerText="Footer"
  headerText="Header"
>
  <div
    className="docked-widget"
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={250}
      unmountOnExit={false}
    >
      <div
        className="widget widget-entering"
      >
        <div
          className="widget-header"
        >
          <div
            className="widget-header-title"
          >
            Header
          </div>
          <button
            className="widget-header-icon"
            onClick={[Function]}
            onKeyPress={[Function]}
            type="button"
          >
            X
          </button>
        </div>
        <div
          className="widget-body"
        >
          Body
        </div>
        <div
          className="widget-footer"
        >
          Footer
        </div>
      </div>
    </Transition>
  </div>
</Widget>
`;

exports[`<Widget /> open/close 3`] = `
<Widget
  bodyText="Body"
  footerText="Footer"
  headerText="Header"
>
  <div
    className="docked-widget"
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={250}
      unmountOnExit={false}
    >
      <div
        className="widget widget-exited"
      >
        <div
          className="widget-header"
        >
          <div
            className="widget-header-title"
          >
            Header
          </div>
          <button
            className="widget-header-icon"
            onClick={[Function]}
            onKeyPress={[Function]}
            type="button"
          >
            X
          </button>
        </div>
        <div
          className="widget-body"
        >
          Body
        </div>
        <div
          className="widget-footer"
        >
          Footer
        </div>
      </div>
    </Transition>
    <button
      className="dock"
      onClick={[Function]}
      onKeyPress={[Function]}
      type="button"
    >
      ^ OPEN ^
    </button>
  </div>
</Widget>
`;
